--- a/style.css
+++ b/style.css
@@ -21,12 +21,17 @@
 }
 
 .buttons {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 10px;
+    display: block;
+}
+
+.row {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
 }
 
 button {
+    width: 60px;
     height: 40px;
     padding: 10px;
     font-size: 18px;
