--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 .calculator {
     width: 300px;
+
     margin: 50px auto;
-    background-color: #f0f0f0;
+    background-color: #000000;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 10px;
@@ -18,6 +19,7 @@
     border: none;
     border-radius: 10px;
     background-color: #fff;
+    color: #333;
 }
 
 .buttons {
@@ -29,6 +31,10 @@
     justify-content: space-between;
     margin-bottom: 10px;
 }
+.row:last-child{
+    justify-content: left;
+    gap: 20px;
+}
 
 button {
     width: 60px;
@@ -37,18 +43,48 @@ button {
     font-size: 18px;
     border: none;
     border-radius: 10px;
-    background-color: #fff;
     cursor: pointer;
 }
 
 button:hover {
-    background-color: #ddd;
+    transform: scale(1.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 .operator {
-    background-color: #ccc;
+    background-color: #4CAF50;
+    color: #fff;
 }
 
 .operator:hover {
-    background-color: #aaa;
+    background-color: #3e8e41;
+}
+
+.number {
+    background-color: #fff;
+    color: #333;
+    border: 1px solid #ddd;
+}
+
+.number:hover {
+    background-color: #f9f9f9;
+    border-color: #ccc;
+}
+
+#clear {
+    background-color: #e74c3c;
+    color: #fff;
+}
+
+#clear:hover {
+    background-color: #c0392b;
+}
+
+#equals {
+    background-color: #03A9F4;
+    color: #fff;
+}
+
+#equals:hover {
+    background-color: #039be5;
 }
