--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ button:hover {
 }
 
 .number {
-    background-color: #fff;
+    background-color: #3d8678;
     color: #333;
     border: 1px solid #ddd;
 }
