--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@
     text-align: right;
     border: none;
     border-radius: 10px;
-    background-color: #fff;
-    color: #333;
+    background-color: #383535;
+    color: #f1efef;
 }
 
 .buttons {
