--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .calculator {
     width: 300px;
     margin: 50px auto;
-    background-color: #f0f0f0;
+    background-color: black;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 10px;
@@ -11,13 +11,14 @@
 #display {
     width: 100%;
     height: 40px;
+    color: white;
     margin-bottom: 20px;
     padding: 10px;
     font-size: 24px;
     text-align: right;
     border: none;
     border-radius: 10px;
-    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .buttons {
@@ -32,18 +33,27 @@ button {
     font-size: 18px;
     border: none;
     border-radius: 10px;
-    background-color: #fff;
     cursor: pointer;
 }
 
-button:hover {
-    background-color: #ddd;
-}
-
 .operator {
-    background-color: #ccc;
+    background-color: #4CAF50;
+    color: #fff;
 }
 
-.operator:hover {
-    background-color: #aaa;
+.number {
+    background-color: #03A9F4;
+    color: #fff;
+}
+
+#clear {
+    grid-column: 1 / 3;
+}
+
+#backspace {
+    grid-column: 3 / 4;
+}
+
+#equals {
+    grid-column: 3 / 5;
 }
