--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .calculator {
     width: 300px;
     margin: 50px auto;
-    background-color: #232121;
+    background-color: #f0f0f0;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 10px;
@@ -11,49 +11,42 @@
 #display {
     width: 100%;
     height: 40px;
-    margin-bottom: 20px;
-    padding: 10px;
     font-size: 24px;
-    color: white;
+    font-weight: bold;
     text-align: right;
+    padding: 10px;
     border: none;
-    border-radius: 5px;
-    background-color: #1e2227;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.grid {
+.buttons {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 10px;
+    margin-top: 20px;
 }
 
 .button {
+    width: 100%;
     height: 40px;
-    padding: 10px;
     font-size: 18px;
+    font-weight: bold;
+    background-color: #4CAF50;
+    color: #fff;
     border: none;
-    border-radius: 5px;
+    border-radius: 10px;
     cursor: pointer;
 }
 
 .button:hover {
-    background-color: #ccc;
-}
-
-.number {
-    background-color: #55f02a;
-}
-
-.operator {
-    background-color: #b0b0b0;
+    background-color: #3e8e41;
 }
 
 #clear, #backspace {
-    background-color: #ff9900;
-    color: #fff;
+    background-color: #FF9800;
 }
 
 #equals {
-    background-color: #4CAF50;
-    color: #fff;
+    background-color: #03A9F4;
 }
