--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
-.calculator {
+.calculator-box {
     width: 300px;
     margin: 50px auto;
-    background-color: black;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 10px;
@@ -11,49 +10,39 @@
 #display {
     width: 100%;
     height: 40px;
-    color: white;
-    margin-bottom: 20px;
-    padding: 10px;
     font-size: 24px;
     text-align: right;
+    padding: 10px;
     border: none;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.buttons {
+.button-grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 10px;
+    margin-top: 20px;
 }
 
-button {
+.button {
+    width: 100%;
     height: 40px;
-    padding: 10px;
     font-size: 18px;
     border: none;
     border-radius: 10px;
+    background-color: #f0f0f0;
     cursor: pointer;
 }
 
-.operator {
-    background-color: #4CAF50;
-    color: #fff;
+.button:hover {
+    background-color: #e0e0e0;
 }
 
-.number {
-    background-color: #03A9F4;
-    color: #fff;
+#clear, #backspace, #equals {
+    background-color: #ccc;
 }
 
-#clear {
-    grid-column: 1 / 3;
-}
-
-#backspace {
-    grid-column: 3 / 4;
-}
-
-#equals {
-    grid-column: 3 / 5;
+#divide, #multiply, #subtract, #add {
+    background-color: #8bc34a;
 }
