--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
     margin: 50px auto;
     padding: 20px;
     border: 1px solid #ccc;
+    background-color: black;
+    
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -11,6 +13,7 @@
     width: 100%;
     height: 40px;
     font-size: 24px;
+    color: #ffffff;
     text-align: right;
     padding: 10px;
     border: none;
@@ -31,7 +34,7 @@
     font-size: 18px;
     border: none;
     border-radius: 10px;
-    background-color: #f0f0f0;
+    background-color: #159dd7;
     cursor: pointer;
 }
 
